objects/ProductLoginContractAssociation__c.object
<CustomObject>
    <description>SFDC1-7972 This object links the Product Login to the related contract</description>
    <fields>
        <fullName>Contract__c</fullName>
        <description>SFDC1-4386 Contract related to this User</description>
        <inlineHelpText>Link the related Contract to this User</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>ProductLoginContracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProductLogin__c</fullName>
        <description>SFDC1-4386 Product Login related to this Contract</description>
        <inlineHelpText>Link the related to User to this Contract</inlineHelpText>
        <label>Product Login</label>
        <referenceTo>ProductLogin__c</referenceTo>
        <relationshipLabel>Product Login Contract Associations</relationshipLabel>
        <relationshipName>ProductLoginContracts1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <description>SFDC1-4386 Type of User</description>
        <inlineHelpText>A user type can only be linked to one license type</inlineHelpText>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Markit Desktop</fullName>
                </value>
                <value>
                    <fullName>Markit Excel Add-In</fullName>
                </value>
                <value>
                    <fullName>MCS CDS</fullName>
                </value>
                <value>
                    <fullName>MCS Loans</fullName>
                </value>
                <value>
                    <fullName>Price Viewer</fullName>
                </value>
                <value>
                    <fullName>sftp.ihsmarkit.com</fullName>
                </value>
                <value>
                    <fullName>MSF</fullName>
                </value>
                <value>
                    <fullName>MSF Toolkit</fullName>
                    <isActive>false</isActive>
                    <label>MSF Toolkit</label>
                </value>
                <value>
                    <fullName>MSF Web</fullName>
                    <isActive>false</isActive>
                    <label>MSF Web</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Login Contract Association</label>
    <nameField>
        <displayFormat>PLContract-{0000000}</displayFormat>
        <label>Product Login Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Login Contract Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>